# DIPOA_Algorithm

./: .gitignore  CMakeLists.txt  DIPOA_Algorithm.cbp  README.md  compile.txt  install  main.cpp  run.sh
includes/: DCCP.h  cut_generation.h  external_libs.h  master_milp.h  results.h  rhadmm.h  unc_solver.h
src/: DCCP.cpp  cut_generation.cpp  master_milp.cpp  rhadmm.cpp  unc_solver.cpp
test_functions/: log_reg_random.h  rhadmm_test.cpp
utils/: results.cpp
